fix: the submenu gap
now the gap is gone :)
so, when moving from menu item to submenu item, the submenu no longer disappears (due to the gap)

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -146,6 +146,15 @@ a {
   z-index: 20;
 }
 
+.has-submenu .submenu::before {
+  content: '';
+  position: absolute;
+  top: -0.35rem;
+  left: 0;
+  right: 0;
+  height: 0.35rem;
+}
+
 .has-submenu .submenu a {
   display: block;
   border-radius: 8px;
